fix mobile spacing

--- a/docs/styles/custom.css
+++ b/docs/styles/custom.css
@@ -386,7 +386,7 @@ li{
 /*ABout section*/
 
 .about-img{
-  background-image: linear-gradient(rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.55)), url(../images/group-ride-suburban.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.65)), url(../images/group-ride-suburban.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
